<resources>
    <string name="app_name">ziWallet</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="transactions">Transactions</string>
    <string name="pay_merchant">Pay Merchant</string>
    <string name="pay_bill">Pay Bill</string>
    <string name="send_money">Send Money</string>
    <string name="cash_out">Cash Out</string>
    <string name="settings">Settings</string>
    <string name="reports">Reports</string>
    <string name="back_name"><![CDATA[Backup & Restore]]></string>
    <string name="stop_alarm">Stop Alarm</string>
    <string name="start_alarm">Save</string>
    <string name="edit_text_hint">Input your Alarm time</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="seconds">Seconds</string>
    <string name="label">Schedule Daily Backup Time</string>
    <string name="search_accounts">Search Accounts...</string>
    <string name="accounts">Accounts</string>
    <string name="search_transactions">Search Transactions....</string>
    <string name="destinations_for_backup">Destinations for backup</string>
    <string name="recommended">OPTIONS</string>
    <string name="google_drive">Google Drive</string>
    <string name="email_address">Email Address</string>
    <string name="other_options">OTHER OPTIONS</string>
    <string name="device_memory">Device Memory</string>
    <string name="storage_emulated_0_zwallet">/storage/emulated/0/ZWallet/</string>
    <string name="backup">Backup</string>
    <string name="backup_locations">Backup Locations</string>
    <string name="month_label">Monthly Transactions</string>
    <string name="legal">About Developer</string>
    <string name="app_was_developed_by">Developed By</string>
    <string name="first_intelligent_systems">First Intelligent Systems</string>
    <string name="support_fis_co_zw">support@fis.co.zw</string>
    <string name="to">to</string>
    <string name="to_date">To Date</string>
    <string name="start_date">Start Date</string>
    <string name="export">Export</string>
    <string name="backup_time">Backup Time</string>
    <string name="backdrop_title">LOVE MUSIC</string>
    <string name="backdrop_subtitle">This season top 20 albums</string>
</resources>
