<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context="com.fis.ecocash.ecocash.ScheduleFragment">

    <TextView
        android:id="@+id/backLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/label"
        android:textAlignment="center"
        android:textSize="24sp" />
    <View
        android:id="@+id/lineView"
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_below="@+id/checkBox"
        android:background="#ff0900" />


    <TextView
        android:id="@+id/backupTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/back"
        android:ems="10"
        android:hint="@string/backup_time"
        android:padding="10dp"
        android:textAlignment="center"
        android:drawableRight="@drawable/ic_alarm_add_black_24dp"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2">

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/device_memory"
            android:textSize="18sp"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/checkBox2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:paddingEnd="10dp"
            android:paddingRight="10dp"
            android:layout_weight="1"
            android:text="@string/google_drive"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>


    <Button
        android:id="@+id/start_alarm_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimary"
        android:text="@string/start_alarm"
        android:textColor="@android:color/white"
        android:textSize="14sp" />

</LinearLayout>