<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="6dp"
    tools:context="com.fis.ecocash.ecocash.PaymentFragment">

    <!-- TODO: Update blank fragment layout -->


    <Button
        android:id="@+id/paymerchant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/pay_merchant"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/paybill"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/pay_bill"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/sendmoney"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/send_money"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/cashout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/cash_out"
        android:textColor="@android:color/white" />

</LinearLayout>
