<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.fis.ecocash.ecocash.RestoreFragment">

    <View
        android:id="@+id/lineView"
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_below="@+id/checkBox"
        android:background="#ff0900" />

    <TextView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="5dp"
        android:paddingBottom="5dp"
        android:text="@string/backup_locations"
        android:textAllCaps="false"
        android:textSize="24sp" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView4"
        android:layout_margin="5dp"
        android:text="@string/device_memory"
        android:textSize="18sp"
        android:textStyle="bold" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/listview4"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_margin="5dp"
        android:paddingEnd="10dp"
        android:paddingRight="10dp"
        android:text="@string/google_drive"
        android:textSize="18sp"
        android:textStyle="bold" />

    <ListView
        android:id="@+id/listview4"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/lineView"
        android:paddingRight="5dp"
        android:paddingTop="10dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp" android:paddingEnd="5dp" />
</RelativeLayout>
