<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.fis.ecocash.ecocash.ReportsFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/txtReport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/reports"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="24sp"
        android:textStyle="bold" />
    <View
        android:id="@+id/lineView"
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="#ff0900"
        android:layout_below="@+id/button2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lineView"
        android:weightSum="5">

        <TextView
            android:id="@+id/startDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="2"
            android:drawableLeft="@drawable/ic_event_black_24dp"
            android:ems="10"
            android:hint="Start Date"
            android:inputType="textPersonName"
            android:padding="5dp"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/endDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="2"
            android:drawableLeft="@drawable/ic_event_black_24dp"
            android:ems="10"
            android:hint="@string/to_date"
            android:inputType="textPersonName"
            android:padding="5dp"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/btnFilter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginRight="2dp"
            android:layout_weight="1"
            android:drawableLeft="@drawable/ic_search_black_24dp"
            android:text="Search"
            android:textAllCaps="true"
            android:textSize="10sp" />
    </LinearLayout>

    <View
        android:id="@+id/lineView1"
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="@color/background"
        android:layout_below="@+id/linear1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_margin="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="2dp"
        android:background="@drawable/back"
        android:drawableLeft="@drawable/ic_file_download_black_24dp"
        android:padding="5dp"
        android:text="@string/export"
        android:textAllCaps="true"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <ListView
        android:id="@+id/listview4"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/lineView1"
        android:paddingEnd="5dp"
        android:paddingRight="5dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp" />

</RelativeLayout>
